--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,10 @@
 {
+  "version": "0.1.0",
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "build": "deno run -A scripts/build-npm.ts"
   },
   "imports": {
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "@std/assert": "jsr:@std/assert@1",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "zod": "npm:zod@^3.24.1"
