add release task

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,11 @@
 {
   "version": "0.1.0",
   "tasks": {
-    "build": "deno run -A scripts/build-npm.ts"
+    "build": "deno run -A scripts/build-npm.ts",
+    "release": {
+      "command": "npm publish ./npm",
+      "dependencies": ["build"]
+    }
   },
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
