--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,7 @@
   },
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
-    "@std/assert": "jsr:@std/assert@1",
+    "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "zod": "npm:zod@^3.24.1"
   }
