--- a/deno.json
+++ b/deno.json
@@ -15,6 +15,6 @@
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/testing": "jsr:@std/testing@^1.0.9",
-    "zod": "npm:zod@^3.24.1"
+    "zod": "https://esm.sh/zod@^3.24.1"
   }
 }
