--- a/deno.json
+++ b/deno.json
@@ -14,8 +14,6 @@
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "@std/assert": "jsr:@std/assert@^1.0.11",
-    "@std/testing": "jsr:@std/testing@^1.0.9",
-    "cbor2": "npm:cbor2@^1.11.0",
-    "zod": "https://esm.sh/zod@^3.24.1"
+    "@std/testing": "jsr:@std/testing@^1.0.9"
   }
 }
